--- a/app/src/main/res/layout/fragment_monthly_activity_item.xml
+++ b/app/src/main/res/layout/fragment_monthly_activity_item.xml
@@ -28,10 +28,10 @@
                 android:layout_marginStart="12dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="12dp"
-                android:fontFamily="sans-serif-black"
                 android:text="July 2020"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
-                android:textSize="32sp" />
+                android:textSize="32sp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/budgetTextView"
@@ -40,10 +40,9 @@
                 android:layout_marginStart="12dp"
                 android:layout_marginTop="24dp"
                 android:layout_marginEnd="12dp"
-                android:fontFamily="sans-serif-medium"
                 android:text="Budget &amp; Categories"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
-                android:textSize="28sp" />
+                android:textStyle="bold" />
 
             <FrameLayout
                 android:id="@+id/budgetCardView"
@@ -67,10 +66,9 @@
                 android:layout_marginStart="12dp"
                 android:layout_marginTop="24dp"
                 android:layout_marginEnd="12dp"
-                android:fontFamily="sans-serif-medium"
                 android:text="Merchants"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
-                android:textSize="28sp" />
+                android:textStyle="bold" />
 
             <FrameLayout
                 android:id="@+id/merchantsCardView"
@@ -93,16 +91,14 @@
                 android:layout_marginStart="12dp"
                 android:layout_marginTop="24dp"
                 android:layout_marginEnd="12dp"
-                android:fontFamily="sans-serif-medium"
                 android:text="Credits"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
-                android:textSize="28sp" />
+                android:textStyle="bold" />
 
             <FrameLayout
                 android:id="@+id/creditsCardView"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="12dp">
+                android:layout_height="wrap_content">
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/creditRecyclerView"
