--- a/app/src/main/res/layout/fragment_transaction_item_detail.xml
+++ b/app/src/main/res/layout/fragment_transaction_item_detail.xml
@@ -53,7 +53,7 @@
                 android:text="$35.71"
                 android:textAlignment="center"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
-                android:textSize="60sp" />
+                android:textSize="52sp" />
 
             <TextView
                 android:id="@+id/textViewTransactionDetailName"
@@ -215,15 +215,12 @@
                 android:layout_marginEnd="12dp"
                 android:text="Similar Transactions"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
-                android:textStyle="bold"
-                android:visibility="invisible" />
+                android:textStyle="bold" />
 
             <FrameLayout
                 android:id="@+id/transactionDetailHistoryCardView"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:layout_marginBottom="12dp">
+                android:layout_height="wrap_content">
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/transactionDetailTransactionHistoryRecyclerView"
