--- a/app/src/main/res/layout/fragment_transaction_item_detail.xml
+++ b/app/src/main/res/layout/fragment_transaction_item_detail.xml
@@ -152,8 +152,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
-                    <com.google.android.gms.maps.MapView
-                        android:id="@+id/mapView"
+                    <fragment
+                        tools:context=".MapsActivity"
+                        android:name="com.google.android.gms.maps.SupportMapFragment"
+                        android:id="@+id/transactionDetailMapFragment"
                         android:layout_width="0dp"
                         android:layout_height="150dp"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -169,7 +171,7 @@
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/mapView">
+                        app:layout_constraintTop_toBottomOf="@+id/transactionDetailMapFragment">
 
                         <androidx.constraintlayout.widget.ConstraintLayout
                             android:layout_width="match_parent"
