--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,5 @@
 <resources>
     <color name="colorPrimary">#147EFB</color>
     <color name="colorPrimaryDark">#000000</color>
+    <color name="colorAccent">#147EFB</color>
 </resources>
