Fix button textColor to white

--- a/app/src/main/res/layout/activity_email.xml
+++ b/app/src/main/res/layout/activity_email.xml
@@ -49,6 +49,7 @@
         android:insetBottom="@dimen/inset_bottom"
         android:text="Continue"
         android:textAllCaps="false"
+        android:textColor="@color/textColor"
         android:textSize="@dimen/text_size"
         app:cornerRadius="@dimen/button_corner_radius"
         app:layout_constraintBottom_toBottomOf="parent"
