--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#147EFB</color>
     <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#147EFB</color>
+    <color name="textColor">@android:color/white</color>
 </resources>
