--- a/app/src/main/res/layout/activity_initial_connect.xml
+++ b/app/src/main/res/layout/activity_initial_connect.xml
@@ -52,8 +52,8 @@
     <ProgressBar
         android:id="@+id/initialConnectProgressBar"
         style="?android:attr/progressBarStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="28dp"
+        android:layout_height="28dp"
         android:indeterminate="true"
         android:visibility="gone"
         app:layout_constraintBottom_toTopOf="parent"
