--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,173 +1,160 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/constraintLayoutHomeFragment"
+    android:id="@+id/homeFragmentNestedScrollView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.home.HomeFragment">
 
-    <androidx.core.widget.NestedScrollView
-        android:id="@+id/nestedScrollViewHome"
+    <LinearLayout
+        android:id="@+id/homeFragmentLinearLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fillViewport="true"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-        <LinearLayout
-            android:id="@+id/homeFragmentLinearLayout"
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/textViewBalance"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="12dp"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginEnd="12dp"
+                    android:text="Current Balance"
+                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
+                    android:textStyle="bold"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/textViewCurrentBalanceAmount"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="2dp"
+                    android:text="$0.00"
+                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
+                    android:textStyle="bold"
+                    app:layout_constraintEnd_toEndOf="@+id/textViewBalance"
+                    app:layout_constraintStart_toStartOf="@+id/textViewBalance"
+                    app:layout_constraintTop_toBottomOf="@+id/textViewBalance" />
+
+                <TextView
+                    android:id="@+id/textViewAmountChange"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="2dp"
+                    android:text="$0.00 (0.00%)"
+                    android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
+                    app:layout_constraintEnd_toEndOf="@+id/textViewCurrentBalanceAmount"
+                    app:layout_constraintStart_toStartOf="@+id/textViewCurrentBalanceAmount"
+                    app:layout_constraintTop_toBottomOf="@+id/textViewCurrentBalanceAmount" />
+
+                <com.robinhood.spark.SparkView
+                    android:id="@+id/sparkView"
+                    android:layout_width="match_parent"
+                    android:layout_height="150dp"
+                    android:layout_marginTop="16dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/textViewAmountChange"
+                    app:spark_lineColor="@color/colorPrimary"
+                    app:spark_scrubEnabled="true" />
+
+                <TextView
+                    android:id="@+id/oneMonthTextView"
+                    android:layout_width="28dp"
+                    android:layout_height="28dp"
+                    android:layout_marginStart="32dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="8dp"
+                    android:background="@drawable/round_corner"
+                    android:gravity="center"
+                    android:text="1M"
+                    android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
+                    android:textColor="@android:color/white"
+                    android:textSize="12sp"
+                    app:layout_constraintEnd_toStartOf="@+id/threeMonthTextView"
+                    app:layout_constraintStart_toStartOf="@+id/sparkView"
+                    app:layout_constraintTop_toBottomOf="@+id/sparkView" />
+
+                <TextView
+                    android:id="@+id/threeMonthTextView"
+                    android:layout_width="28dp"
+                    android:layout_height="28dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="8dp"
+                    android:background="@android:color/transparent"
+                    android:gravity="center"
+                    android:text="3M"
+                    android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
+                    android:textColor="?android:attr/textColorPrimary"
+                    android:textSize="12sp"
+                    app:layout_constraintEnd_toStartOf="@+id/oneYearTextView"
+                    app:layout_constraintStart_toEndOf="@+id/oneMonthTextView"
+                    app:layout_constraintTop_toBottomOf="@+id/sparkView" />
+
+                <TextView
+                    android:id="@+id/oneYearTextView"
+                    android:layout_width="28dp"
+                    android:layout_height="28dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="32dp"
+                    android:background="@android:color/transparent"
+                    android:gravity="center"
+                    android:text="1Y"
+                    android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
+                    android:textColor="?android:attr/textColorPrimary"
+                    android:textSize="12sp"
+                    app:layout_constraintEnd_toEndOf="@+id/sparkView"
+                    app:layout_constraintStart_toEndOf="@+id/threeMonthTextView"
+                    app:layout_constraintTop_toBottomOf="@+id/sparkView" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </FrameLayout>
+
+        <TextView
+            android:id="@+id/textViewLatestTransactions"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginEnd="12dp"
+            android:text="Latest Transactions"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
+            android:textStyle="bold" />
+
+        <FrameLayout
+            android:id="@+id/latestTransactionsCardView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
             <ProgressBar
                 android:id="@+id/homeFragmentProgressBar"
-                style="@android:style/Widget.Material.Light.ProgressBar.Small"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="28dp"
+                android:layout_height="28dp"
                 android:layout_gravity="center"
                 android:layout_margin="12dp"
                 android:indeterminate="true" />
 
-            <FrameLayout
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/homeRecyclerView"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <TextView
-                        android:id="@+id/textViewBalance"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="12dp"
-                        android:layout_marginTop="4dp"
-                        android:layout_marginEnd="12dp"
-                        android:text="Current Balance"
-                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
-                        android:textStyle="bold"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-                    <TextView
-                        android:id="@+id/textViewCurrentBalanceAmount"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="2dp"
-                        android:text="$0.00"
-                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
-                        android:textStyle="bold"
-                        app:layout_constraintEnd_toEndOf="@+id/textViewBalance"
-                        app:layout_constraintStart_toStartOf="@+id/textViewBalance"
-                        app:layout_constraintTop_toBottomOf="@+id/textViewBalance" />
-
-                    <TextView
-                        android:id="@+id/textViewAmountChange"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="2dp"
-                        android:text="$0.00 (0.00%)"
-                        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
-                        app:layout_constraintEnd_toEndOf="@+id/textViewCurrentBalanceAmount"
-                        app:layout_constraintStart_toStartOf="@+id/textViewCurrentBalanceAmount"
-                        app:layout_constraintTop_toBottomOf="@+id/textViewCurrentBalanceAmount" />
-
-                    <com.robinhood.spark.SparkView
-                        android:id="@+id/sparkView"
-                        android:layout_width="match_parent"
-                        android:layout_height="150dp"
-                        android:layout_marginTop="16dp"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/textViewAmountChange"
-                        app:spark_lineColor="@color/colorPrimary"
-                        app:spark_scrubEnabled="true" />
-
-                    <TextView
-                        android:id="@+id/oneMonthTextView"
-                        android:layout_width="28dp"
-                        android:layout_height="28dp"
-                        android:layout_marginStart="32dp"
-                        android:layout_marginTop="16dp"
-                        android:layout_marginEnd="8dp"
-                        android:background="@drawable/round_corner"
-                        android:gravity="center"
-                        android:text="1M"
-                        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
-                        android:textColor="@android:color/white"
-                        android:textSize="12sp"
-                        app:layout_constraintEnd_toStartOf="@+id/threeMonthTextView"
-                        app:layout_constraintStart_toStartOf="@+id/sparkView"
-                        app:layout_constraintTop_toBottomOf="@+id/sparkView" />
-
-                    <TextView
-                        android:id="@+id/threeMonthTextView"
-                        android:layout_width="28dp"
-                        android:layout_height="28dp"
-                        android:layout_marginStart="8dp"
-                        android:layout_marginTop="16dp"
-                        android:layout_marginEnd="8dp"
-                        android:background="@android:color/transparent"
-                        android:gravity="center"
-                        android:text="3M"
-                        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
-                        android:textColor="?android:attr/textColorPrimary"
-                        android:textSize="12sp"
-                        app:layout_constraintEnd_toStartOf="@+id/oneYearTextView"
-                        app:layout_constraintStart_toEndOf="@+id/oneMonthTextView"
-                        app:layout_constraintTop_toBottomOf="@+id/sparkView" />
-
-                    <TextView
-                        android:id="@+id/oneYearTextView"
-                        android:layout_width="28dp"
-                        android:layout_height="28dp"
-                        android:layout_marginStart="8dp"
-                        android:layout_marginTop="16dp"
-                        android:layout_marginEnd="32dp"
-                        android:background="@android:color/transparent"
-                        android:gravity="center"
-                        android:text="1Y"
-                        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
-                        android:textColor="?android:attr/textColorPrimary"
-                        android:textSize="12sp"
-                        app:layout_constraintEnd_toEndOf="@+id/sparkView"
-                        app:layout_constraintStart_toEndOf="@+id/threeMonthTextView"
-                        app:layout_constraintTop_toBottomOf="@+id/sparkView" />
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
-
-            </FrameLayout>
-
-            <TextView
-                android:id="@+id/textViewLatestTransactions"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="12dp"
-                android:layout_marginTop="24dp"
-                android:layout_marginEnd="12dp"
-                android:text="Latest Transactions"
-                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
-                android:textStyle="bold" />
-
-            <FrameLayout
-                android:id="@+id/latestTransactionsCardView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/homeRecyclerView"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:nestedScrollingEnabled="false"
-                    tools:itemCount="4"
-                    tools:listitem="@layout/item_transaction" />
-            </FrameLayout>
-
-        </LinearLayout>
-    </androidx.core.widget.NestedScrollView>
-</androidx.constraintlayout.widget.ConstraintLayout>
+                android:layout_height="match_parent"
+                android:nestedScrollingEnabled="false"
+                tools:itemCount="4"
+                tools:listitem="@layout/item_transaction" />
+        </FrameLayout>
+    </LinearLayout>
+</androidx.core.widget.NestedScrollView>
