--- a/app/src/main/res/layout/fragment_transaction_item_detail.xml
+++ b/app/src/main/res/layout/fragment_transaction_item_detail.xml
@@ -29,6 +29,18 @@
             app:layout_constraintTop_toTopOf="parent"
             app:tint="@color/colorPrimary" />
 
+        <ProgressBar
+            android:id="@+id/transactionDetailSaveProgressBar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="28dp"
+            android:layout_height="28dp"
+            android:layout_gravity="right"
+            android:layout_marginTop="12dp"
+            android:layout_marginEnd="12dp"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <ImageView
             android:id="@+id/imageViewTransactionDetailLogo"
             android:layout_width="64dp"
