--- a/app/src/main/res/layout/fragment_transaction_item_detail.xml
+++ b/app/src/main/res/layout/fragment_transaction_item_detail.xml
@@ -21,7 +21,7 @@
             android:id="@+id/transactionDetailSaveImageView"
             android:layout_width="28dp"
             android:layout_height="28dp"
-            android:layout_gravity="right"
+            android:layout_gravity="end"
             android:layout_marginTop="12dp"
             android:layout_marginEnd="12dp"
             android:src="@drawable/ic_baseline_add_circle_outline_24"
@@ -34,7 +34,7 @@
             style="?android:attr/progressBarStyle"
             android:layout_width="28dp"
             android:layout_height="28dp"
-            android:layout_gravity="right"
+            android:layout_gravity="end"
             android:layout_marginTop="12dp"
             android:layout_marginEnd="12dp"
             android:visibility="gone"
@@ -85,7 +85,7 @@
             android:layout_marginTop="32dp"
             android:layout_marginEnd="12dp"
             app:cardCornerRadius="@dimen/card_corner_radius"
-            app:cardElevation="@dimen/cardview_default_elevation">
+            app:cardElevation="2dp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -152,7 +152,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="12dp"
             app:cardCornerRadius="@dimen/card_corner_radius"
-            app:cardElevation="@dimen/cardview_default_elevation">
+            app:cardElevation="2dp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
