--- a/app/src/main/res/layout/fragment_transaction_item_detail.xml
+++ b/app/src/main/res/layout/fragment_transaction_item_detail.xml
@@ -29,18 +29,6 @@
             app:layout_constraintTop_toTopOf="parent"
             app:tint="@color/colorPrimary" />
 
-        <ProgressBar
-            android:id="@+id/transactionDetailSaveProgressBar"
-            style="?android:attr/progressBarStyle"
-            android:layout_width="28dp"
-            android:layout_height="28dp"
-            android:layout_gravity="end"
-            android:layout_marginTop="12dp"
-            android:layout_marginEnd="12dp"
-            android:visibility="gone"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
         <ImageView
             android:id="@+id/imageViewTransactionDetailLogo"
             android:layout_width="64dp"
@@ -85,7 +73,9 @@
             android:layout_marginTop="32dp"
             android:layout_marginEnd="12dp"
             app:cardCornerRadius="@dimen/card_corner_radius"
-            app:cardElevation="2dp">
+            app:cardElevation="0dp"
+            app:strokeColor="@color/material_on_surface_stroke"
+            app:strokeWidth="0.7dp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -152,7 +142,9 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="12dp"
             app:cardCornerRadius="@dimen/card_corner_radius"
-            app:cardElevation="2dp">
+            app:cardElevation="0dp"
+            app:strokeColor="@color/material_on_surface_stroke"
+            app:strokeWidth="0.7dp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
