Add saved transactions

--- a/app/src/main/res/layout/fragment_monthly_activity_item.xml
+++ b/app/src/main/res/layout/fragment_monthly_activity_item.xml
@@ -49,6 +49,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
+                <TextView
+                    android:id="@+id/textView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:text="TextView"
+                    android:visibility="gone" />
+
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/budgetRecyclerView"
                     android:layout_width="match_parent"
@@ -110,5 +118,4 @@
             </FrameLayout>
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
