Fix crash on map load in release build

--- a/app/src/main/res/layout/fragment_transaction_item_detail.xml
+++ b/app/src/main/res/layout/fragment_transaction_item_detail.xml
@@ -150,11 +150,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-                <androidx.fragment.app.FragmentContainerView
+                <fragment
                     android:id="@+id/transactionDetailMapFragment"
                     android:name="com.google.android.gms.maps.SupportMapFragment"
                     android:layout_width="0dp"
-                    android:layout_height="150dp"
+                    android:layout_height="160dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
