--- a/app/src/main/res/layout/item_transaction.xml
+++ b/app/src/main/res/layout/item_transaction.xml
@@ -54,14 +54,13 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="12dp"
-        android:text="TextView"
+        android:text="4/9/20"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textColor="@android:color/tertiary_text_light"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/transactionNameTextView"
         app:layout_constraintStart_toStartOf="@+id/transactionNameTextView"
-        app:layout_constraintTop_toBottomOf="@+id/transactionLocationTextView"
-        tools:text="4/9/20" />
+        app:layout_constraintTop_toBottomOf="@+id/transactionLocationTextView" />
 
     <TextView
         android:id="@+id/transactionAmountTextView"
