--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -34,11 +34,26 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/bankAccountsTextView"
+                android:id="@+id/budgetsTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
                 android:layout_marginTop="8dp"
+                android:layout_marginEnd="12dp"
+                android:text="Budgets"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
+                android:textStyle="bold" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/bankAccountsTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="12dp"
+                android:layout_marginTop="24dp"
                 android:layout_marginEnd="12dp"
                 android:text="Linked Accounts"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
@@ -50,7 +65,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="12dp"
                 tools:itemCount="2"
-                tools:listitem="@layout/item_bank_account" />
+                tools:listitem="@layout/item_transaction" />
 
             <Button
                 android:id="@+id/addAccountButton"
