--- a/app/src/main/res/layout/item_transaction.xml
+++ b/app/src/main/res/layout/item_transaction.xml
@@ -30,7 +30,7 @@
         android:layout_marginTop="12dp"
         android:layout_marginEnd="12dp"
         android:singleLine="true"
-        android:text="This is a very long text that repeats itself over and over"
+        android:text="Title"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/transactionAmountTextView"
@@ -42,7 +42,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="12dp"
-        android:text="4/9/20"
+        android:text="Subtitle"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textColor="@android:color/tertiary_text_light"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -56,7 +56,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="12dp"
         android:maxLines="1"
-        android:text="$500000.14"
+        android:text="$Amount"
         android:textAlignment="viewEnd"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
         app:layout_constraintBottom_toBottomOf="@+id/transactionTitleTextView"
