--- a/app/src/main/res/layout/item_monthly_activity_categories.xml
+++ b/app/src/main/res/layout/item_monthly_activity_categories.xml
@@ -13,11 +13,11 @@
         android:id="@+id/budgetNameTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="12dp"
         android:layout_marginTop="12dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="12dp"
         android:lines="1"
-        android:text="Shopping"
+        android:text="Category"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/budgetAmountTextView"
@@ -53,9 +53,9 @@
         android:id="@+id/budgetAmountTextView"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="12dp"
         android:maxLines="1"
-        android:text="$1000000.00"
+        android:text="$Amount"
         android:textAlignment="viewEnd"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
         app:layout_constraintBottom_toBottomOf="@+id/budgetNameTextView"
