--- a/app/src/main/res/layout/item_budget_amount.xml
+++ b/app/src/main/res/layout/item_budget_amount.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content">
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/budgetAmountImageView"
         android:layout_width="41dp"
         android:layout_height="41dp"
         android:layout_marginStart="12dp"
@@ -17,12 +17,35 @@
         app:srcCompat="@drawable/entertainment" />
 
     <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
+        android:id="@+id/budgetAmountTitleTextView"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:text="TextView"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
-        app:layout_constraintStart_toEndOf="@+id/imageView2"
-        app:layout_constraintTop_toTopOf="@+id/imageView2" />
+        android:layout_marginStart="12dp"
+        android:layout_marginEnd="12dp"
+        android:text="Title"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/budgetAmountImageView"
+        app:layout_constraintEnd_toStartOf="@+id/budgetAmountInputLayout"
+        app:layout_constraintStart_toEndOf="@+id/budgetAmountImageView"
+        app:layout_constraintTop_toTopOf="@+id/budgetAmountImageView" />
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/budgetAmountInputLayout"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="12dp"
+        android:layout_marginEnd="12dp"
+        app:layout_constraintBottom_toBottomOf="@+id/budgetAmountImageView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/budgetAmountTitleTextView"
+        app:layout_constraintTop_toTopOf="@+id/budgetAmountImageView">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/budgetAmountEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="number" />
+    </com.google.android.material.textfield.TextInputLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
