--- a/app/src/main/res/layout/item_budget_amount.xml
+++ b/app/src/main/res/layout/item_budget_amount.xml
@@ -37,8 +37,11 @@
         android:layout_marginStart="12dp"
         android:layout_marginEnd="12dp"
         android:background="@null"
+        android:imeOptions="actionDone"
         android:inputType="number"
+        android:maxLength="9"
         android:textAlignment="viewEnd"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
         app:layout_constraintBottom_toBottomOf="@+id/budgetAmountImageView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/budgetAmountTitleTextView"
