--- a/app/src/main/res/layout/item_monthly_activity_categories.xml
+++ b/app/src/main/res/layout/item_monthly_activity_categories.xml
@@ -9,6 +9,19 @@
     android:clickable="true"
     android:focusable="true">
 
+    <ImageView
+        android:id="@+id/budgetLogoImageView"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="12dp"
+        android:background="@drawable/shopping_background"
+        android:contentDescription="TODO"
+        android:padding="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/budgetProgressBar"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/budgetNameTextView"
+        app:srcCompat="@drawable/shopping" />
+
     <TextView
         android:id="@+id/budgetNameTextView"
         android:layout_width="0dp"
@@ -17,7 +30,7 @@
         android:layout_marginTop="12dp"
         android:layout_marginEnd="12dp"
         android:lines="1"
-        android:text="Category"
+        android:text="Title"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/budgetAmountTextView"
@@ -30,6 +43,7 @@
         android:layout_height="0dp"
         android:layout_marginEnd="12dp"
         android:contentDescription="Arrow"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@+id/budgetAmountTextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/budgetNameTextView"
@@ -39,13 +53,11 @@
         android:id="@+id/budgetProgressBar"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginEnd="140dp"
-        android:layout_marginBottom="12dp"
+        android:layout_height="wrap_content"
         android:max="100"
         android:progress="40"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/budgetSubtitleTextView"
+        app:layout_constraintEnd_toStartOf="@+id/budgetSubtitleTextView"
         app:layout_constraintStart_toStartOf="@+id/budgetNameTextView"
         app:layout_constraintTop_toBottomOf="@+id/budgetNameTextView" />
 
@@ -62,25 +74,27 @@
         app:layout_constraintEnd_toStartOf="@+id/budgetArrowImageView"
         app:layout_constraintTop_toTopOf="@+id/budgetNameTextView" />
 
+    <TextView
+        android:id="@+id/budgetSubtitleTextView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="12dp"
+        android:layout_marginBottom="12dp"
+        android:text="Subtitle"
+        android:textAlignment="viewEnd"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/budgetAmountTextView"
+        app:layout_constraintStart_toEndOf="@+id/budgetProgressBar"
+        app:layout_constraintTop_toBottomOf="@+id/budgetAmountTextView" />
+
     <View
         android:id="@+id/budgetDividerView"
         android:layout_width="0dp"
         android:layout_height="0.7dp"
         android:background="?android:attr/listDivider"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/budgetLogoImageView" />
 
-    <ImageView
-        android:id="@+id/budgetLogoImageView"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="12dp"
-        android:background="@drawable/shopping_background"
-        android:padding="8dp"
-        app:layout_constraintBottom_toBottomOf="@+id/budgetProgressBar"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/budgetNameTextView"
-        app:srcCompat="@drawable/shopping"
-        android:contentDescription="TODO" />
 </androidx.constraintlayout.widget.ConstraintLayout>
